Remove 'datastream' language; closes #27.
Replaces 'datastream' with 'file' or 'metadata', as appropriate.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,8 +16,8 @@ en:
                     checksum: "Checksum"
                     checksum_type: "Checksum Type"
                     creation_date: "Created"
-                    datastream: "Datastream"
                     description: "Description"
+                    file: "File"
                     id: "ID"
                     identifier: "Identifier"
                     log: "Log"
