Batches submitted as multiple jobs; addresses DDR-280.
Significant refactoring of batch processing to submit multiple jobs rather
than running as a single monolithic job.

Adds BatchObjectMessage ActiveRecord class and modifies the BatchObject
ActiveRecord class.

Replaces Log4r logging with the default Logger.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,7 @@ en:
     ddr:
         batch:
             errors:
-                prefix: "%{identifier} [Database ID: %{id}]:"
+                prefix: "%{identifier}:"
             no_batches: "No %{type} batches found for your user account."
             web:
                 action_names:
